# gy-sang

./: .clang-format  .gitattributes  .gitmodules  CMakeLists.txt  README.md  Version.cmake  annotated.html  annotated_dup.js  classes.html  conanfile.py  dir_c1bc45f660ed630a93de3e8e6a40a579.html  dir_c1bc45f660ed630a93de3e8e6a40a579.js  files.html  files_dup.js  globals.html  globals_defs.html  gysang_8hpp.html  gysang_8hpp.js  index.html  md_examples.html  md_release_notes.html  navtreedata.js  navtreeindex0.js  pages.html  structgysang_1_1_angle-members.html  structgysang_1_1_angle.html  structgysang_1_1_angle.js  version.hpp.in
cmake/: gysangDoFindGympl.cmake  gysangUpdateVersion.cmake
docs/: CMakeLists.txt  Doxyfile.in  examples.md  index.md  release_notes.md
include/gysang/: cmath.hpp  gysang.hpp  version.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  classes_0.js  defines_0.js  files_0.js  pages_0.js  pages_1.js  searchdata.js
test_package/: test_package.cpp
tests/: CMakeLists.txt  basicCompiletimeTests.cpp  basicRuntimeTests.cpp  cmathRuntimeTests.cpp  example.cpp
